--- a/about.html
+++ b/about.html
@@ -14,20 +14,7 @@
 
 <body>
     <!-- Header -->
-    <header class="header">
-        <nav class="header__menu navbar navbar-expand-md">
-            <a class="navbar-brand header__menu__link" href="index.html">Home</a>
-            <div class="collapse navbar-collapse">
-                <ul class="navbar-nav mr-auto">
-                    <li class="nav-item dropdown header__menu__link">
-                        <a class="nav-link header__menu__link" href="proyectos.html">
-                            Proyectos
-                        </a>
-                    </li>
-                </ul>
-            </div>
-        </nav>
-    </header>
+    <header class="header" id="header"></header>
 
     <div class="container my-5">
         <h1 class="presentacion__contenido__titulo text-center mb-5">Sobre mí</h1>
@@ -56,7 +43,8 @@
             <div class="col-4 mb-4">
                 <div class="col-12 text-center position-relative">
                     <div class="circle-container">
-                        <img src="assets/perfil.png" alt="Descripción de la imagen" class="img-fluid" style="border-radius: 50%;">
+                        <img src="assets/perfil.png" alt="Descripción de la imagen" class="img-fluid"
+                            style="border-radius: 50%;">
                         <div class="circle-wrapper">
                             <div class="circle circle1"></div>
                             <div class="circle circle2"></div>
@@ -97,6 +85,12 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
+        <script src="header.js"></script>
+        <script>
+            document.addEventListener("DOMContentLoaded", function () {
+                loadHeader('about');
+            });
+        </script>
 </body>
 
 </html>
