--- a/index.html
+++ b/index.html
@@ -14,22 +14,7 @@
 </head>
 
 <body>
-    <header class="header">
-        <nav class="header__menu navbar navbar-expand-md">
-            <div class="collapse navbar-collapse">
-                <ul class="navbar-nav mr-auto">
-                    <li class="nav-item">
-                        <a class="nav-link header__menu__link" href="about.html">Sobre mí</a>
-                    </li>
-                    <li class="nav-item dropdown header__menu__link">
-                        <a class="nav-link header__menu__link" href="proyectos.html">
-                            Proyectos
-                        </a>
-                    </li>
-                </ul>
-            </div>
-        </nav>
-    </header>
+    <header class="header" id="header"> </header>
     <main class="presentacion">
         <section class="presentacion__contenido">
             <h1 class="presentacion__contenido__titulo">
@@ -56,16 +41,22 @@
             </div>
 
         </section>
-        <img class="presentacion__img" src="assets/Imagem.png" alt="Foto de Ana García desarrolando un proyecto">
+        <img class="presentacion__img" src="" alt="Foto de José desarrolando un proyecto">
 
     </main>
     <footer class="footer">
-        <p>Desarrollado por José Pino</p>
+        <h4>Desarrollado por José Pino</p>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
+        <script src="header.js"></script>
+    <script>
+        document.addEventListener("DOMContentLoaded", function () {
+            loadHeader('index');
+        });
+    </script>
 </body>
 
 </html>
