--- a/proyectos.html
+++ b/proyectos.html
@@ -22,12 +22,13 @@
 
         /* Estilo para el modal */
         .modal-dialog {
-            max-width: 90%;
+            width: auto;
+            height: auto;
             /* Ajusta el ancho máximo del modal */
         }
 
         .modal-body img {
-            width: 100%;
+            width: auto;
             /* Asegura que la imagen se ajuste al ancho del modal */
             height: auto;
             /* Mantiene la proporción de la imagen */
@@ -49,18 +50,7 @@
 
 <body>
     <!-- Header -->
-    <header class="header">
-        <nav class="header__menu navbar navbar-expand-lg">
-            <a class="navbar-brand header__menu__link" href="index.html">Home</a>
-            <div class="collapse navbar-collapse">
-                <ul class="navbar-nav mr-auto">
-                    <li class="nav-item">
-                        <a class="nav-link header__menu__link" href="about.html">Sobre mí</a>
-                    </li>
-                </ul>
-            </div>
-        </nav>
-    </header>
+    <header class="header" id="header"></header>
 
     <!-- Main Content -->
     <main class="container my-5">
@@ -98,7 +88,7 @@
                             pixel art para ofrecer una experiencia visual única. Explora un mundo inmersivo lleno de
                             aventuras y desafíos.</p>
                         <a href="#" data-bs-toggle="modal" data-bs-target="#modalProyecto1" class="btn btn-primary">Ver
-                            Imagen Grande</a>
+                            Imagen</a>
                     </div>
                 </div>
             </div>
@@ -139,28 +129,6 @@
                                         <span class="visually-hidden">Next</span>
                                     </button>
                                 </div>
-                                <div class="card-body">
-                                    <h5 class="card-title">War of Axia</h5>
-                                    <p class="card-text">War of Axia es un juego RPG 2D en desarrollo de Java con Maven,
-                                        que utiliza
-                                        pixel art para ofrecer una experiencia visual única. Explora un mundo inmersivo
-                                        lleno de
-                                        aventuras y desafíos.</p>
-                                    <a href="#" data-bs-toggle="modal" data-bs-target="#modalProyecto1"
-                                        class="btn btn-primary">Ver
-                                        Imagen Grande</a>
-                                </div>
-                            </div>
-                            <div class="card-body">
-                                <h5 class="card-title">War of Axia</h5>
-                                <p class="card-text">War of Axia es un juego RPG 2D en desarrollo de Java con Maven, que
-                                    utiliza
-                                    pixel art para ofrecer una experiencia visual única. Explora un mundo inmersivo
-                                    lleno de
-                                    aventuras y desafíos.</p>
-                                <a href="#" data-bs-toggle="modal" data-bs-target="#modalProyecto1"
-                                    class="btn btn-primary">Ver
-                                    Imagen Grande</a>
                             </div>
                         </div>
                     </div>
@@ -205,7 +173,7 @@
                             las operaciones de la aplicación. Caos News combina diseño moderno con una robusta
                             funcionalidad para ofrecer una experiencia de usuario completa.</p>
                         <a href="#" data-bs-toggle="modal" data-bs-target="#modalProyecto2" class="btn btn-primary">Ver
-                            Imagen Grande</a>
+                            Imagen</a>
                     </div>
                 </div>
             </div>
@@ -256,9 +224,14 @@
                     <div id="carouselProyecto3" class="carousel slide">
                         <div class="carousel-inner">
                             <div class="carousel-item active">
-                                <img src="assets/WarOfAxia.jpg" class="d-block w-100" alt="War of Axia">
+                                <img src="assets/encriptador.jpg" class="d-block w-100" alt="War of Axia">
                             </div>
-                            <!-- Agrega más imágenes si es necesario -->
+                            <div class="carousel-item">
+                                <img src="assets/encriptador2.jpg" class="d-block w-100" alt="War of Axia">
+                            </div>
+                            <div class="carousel-item">
+                                <img src="assets/encriptadorMobile.jpg" class="d-block w-100" alt="War of Axia">
+                            </div>
                         </div>
                         <button class="carousel-control-prev" type="button" data-bs-target="#carouselProyecto3"
                             data-bs-slide="prev">
@@ -272,11 +245,12 @@
                         </button>
                     </div>
                     <div class="card-body">
-                        <h5 class="card-title">Proyecto 3</h5>
-                        <p class="card-text">Una breve descripción del Proyecto 3. Incluye detalles sobre qué hace el
-                            proyecto y cualquier tecnología relevante que hayas utilizado.</p>
+                        <h5 class="card-title">Encriptador de Texto</h5>
+                        <p class="card-text">El encriptador de texto es un desafío del programa Alura Latam en conjunto
+                            con Oracle. Esta aplicación permite encriptar y desencriptar texto instantáneamente usando
+                            HTML, JS, jQuery y Bootstrap 5.</p>
                         <a href="#" data-bs-toggle="modal" data-bs-target="#modalProyecto3" class="btn btn-primary">Ver
-                            Imagen Grande</a>
+                            Imagen</a>
                     </div>
                 </div>
             </div>
@@ -286,11 +260,33 @@
                 <div class="modal-dialog modal-dialog-centered">
                     <div class="modal-content">
                         <div class="modal-header">
-                            <h5 class="modal-title" id="modalProyecto3Label">Imagen del Proyecto 3</h5>
+                            <h5 class="modal-title" id="modalProyecto3Label">Encriptador de Texto</h5>
                             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                         </div>
                         <div class="modal-body">
-                            <img src="assets/project3.jpg" class="img-fluid" alt="Imagen Grande del Proyecto 3">
+                            <div id="carouselProyecto33" class="carousel slide">
+                                <div class="carousel-inner">
+                                    <div class="carousel-item active">
+                                        <img src="assets/encriptador.jpg" class="d-block w-100" alt="War of Axia">
+                                    </div>
+                                    <div class="carousel-item">
+                                        <img src="assets/encriptador2.jpg" class="d-block w-100" alt="War of Axia">
+                                    </div>
+                                    <div class="carousel-item">
+                                        <img src="assets/encriptadorMobile.jpg" class="d-block w-100" alt="War of Axia">
+                                    </div>
+                                </div>
+                                <button class="carousel-control-prev" type="button" data-bs-target="#carouselProyecto33"
+                                    data-bs-slide="prev">
+                                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                    <span class="visually-hidden">Previous</span>
+                                </button>
+                                <button class="carousel-control-next" type="button" data-bs-target="#carouselProyecto33"
+                                    data-bs-slide="next">
+                                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                    <span class="visually-hidden">Next</span>
+                                </button>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -303,7 +299,15 @@
         <p>Desarrollado por José Pino</p>
     </footer>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin="anonymous"></script>
+        <script src="header.js"></script>
+        <script>
+            document.addEventListener("DOMContentLoaded", function () {
+                loadHeader('proyectos');
+            });
+        </script>
 </body>
 
 </html>
