--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             </div>
 
         </section>
-        <img class="presentacion__img" src="" alt="Foto de José desarrolando un proyecto">
+        <img class="presentacion__img" src="assets/fotoPC.jpg" alt="Foto de José desarrolando un proyecto">
 
     </main>
     <footer class="footer">
